--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
         <title>Pergola-Test</title>
     </head>
     <body>
-		<h1>Hallo Pergola</h1>
+	<h1>Hallo Pergola</h1>
+        <p>Mein Test<p>
     </body>
 </html>
